# opentitan-rs

./: .gitignore  Cargo.toml
.cargo/: config.toml  run.sh
app/: Cargo.toml
app/src/: main.rs
opentitan-lib/: Cargo.toml  build.rs  layout.ld  memory.ld
opentitan-lib/src/: alloc.rs  atomic.rs  interrupt.rs  lib.rs  print.rs  synch.rs  tests.rs
opentitan-lib/src/devices/: aes.rs  csrng.rs  hmac.rs  kmac.rs  mod.rs  otbn.rs  uart.rs
opentitan-macros/: Cargo.toml
opentitan-macros/src/: addresses.rs  entry.rs  hjson_sanitizer.rs  lib.rs  registers.rs
