[package]
name = "opentitan-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.10.1"
opentitan-macros = { path = "../opentitan-macros" }
tock-registers = "^0.8"

linked_list_allocator = { version = "^0.10", default-features = false, features = [
    "const_mut_refs",
], optional = true }
riscv-atomic-emulation-trap = { version = "^0.4.0", optional = true }

[features]
default = ["alloc", "atomic_emulation"]
alloc = ["dep:linked_list_allocator"]
verbose_logging = []
atomic_emulation = ["dep:riscv-atomic-emulation-trap"]
silent_atomic_emulation = []
test_framework = []
